--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="#">Home</a>
         <a href="#">Oferta educativa</a>
         <a href="#">Proyectos</a>
-        <a href="#">Hubicación</a>
+        <a href="#">Ubicación</a>
     </div>
     <div class="contenido">
         
